force-app/main/default/objects/Deals__c/Deals__c.object-meta.xml
<CustomObject>
    <label>Opportunity Custom</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities Custom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>