force-app/main/default/objects/Deals__c/fields/Billing_Address_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Name_2__c</fullName>
    <label>Address1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>