force-app/main/default/objects/Deals__c/fields/Billing_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Name__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>