force-app/main/default/objects/Deals__c/fields/BranchLocation__c.field-meta.xml
<CustomField>
    <fullName>BranchLocation__c</fullName>
    <label>Branch Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>BATHING SOLUTIONS</fullName>
            </value>
            <value>
                <fullName>NSD</fullName>
            </value>
            <value>
                <fullName>KEY ACCOUNTS</fullName>
            </value>
            <value>
                <fullName>VENGERI</fullName>
            </value>
            <value>
                <fullName>BUDGET BUY</fullName>
            </value>
            <value>
                <fullName>ROOF TILES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>