force-app/main/default/objects/Deals__c/fields/Copy_to_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_to_Shipping_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy to Shipping Address</label>
    <type>Checkbox</type>
</CustomField>