force-app/main/default/objects/Deals__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <displayFormat>CU-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Customer ID</label>
    <type>AutoNumber</type>
</CustomField>