force-app/main/default/objects/Deals__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price too high</fullName>
            </value>
            <value>
                <fullName>Lack of follow-up / poor response time</fullName>
            </value>
            <value>
                <fullName>Product or Service didn’t meet customer needs</fullName>
            </value>
            <value>
                <fullName>Decision postponed / No urgency</fullName>
            </value>
            <value>
                <fullName>Lost contact with the prospect</fullName>
            </value>
            <value>
                <fullName>Delivery timelines not acceptable</fullName>
            </value>
            <value>
                <fullName>Customer project cancelled or delayed</fullName>
            </value>
            <value>
                <fullName>Poor experience during initial interactions</fullName>
            </value>
            <value>
                <fullName>⁠Architect recommended another firm.</fullName>
            </value>
            <value>
                <fullName>⁠Reason is not listed Above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>