force-app/main/default/objects/Deals__c/fields/NextFollowupDate__c.field-meta.xml
<CustomField>
    <fullName>NextFollowupDate__c</fullName>
    <label>Next Followup Date</label>
    <type>Date</type>
</CustomField>