force-app/main/default/objects/Deals__c/fields/Opp_BE_Name__c.field-meta.xml
<CustomField>
    <fullName>Opp_BE_Name__c</fullName>
    <label>Opp BE Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>