force-app/main/default/objects/Deals__c/fields/SecondaryPhone__c.field-meta.xml
<CustomField>
    <fullName>SecondaryPhone__c</fullName>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>