force-app/main/default/objects/Deals__c/fields/Selected_Cart_Name__c.field-meta.xml
<CustomField>
    <fullName>Selected_Cart_Name__c</fullName>
    <label>Selected Cart Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>