force-app/main/default/objects/Deals__c/fields/Shipping_Address_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Name_3__c</fullName>
    <label>Address 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>