force-app/main/default/objects/Deals__c/fields/Shipping_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Name__c</fullName>
    <label>Address Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>