force-app/main/default/objects/Deals__c/validationRules/Check_stage_for_sales_confirm.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_stage_for_sales_confirm</fullName>
    <active>true</active>
    <description>Check opp stage is closed to mark the sales confirmation checkbox</description>
    <errorConditionFormula>AND(
     Customer_Confirmation__c = TRUE, 
    NOT(ISPICKVAL( Stage__c , &quot;Closed Won&quot;))
)</errorConditionFormula>
    <errorMessage>🚫 Customer Confirmation cannot be marked unless the Stage is &apos;Closed Won&apos;. 📝 Please update the Stage to &apos;Closed Won&apos; before selecting Customer Confirmation. ✅</errorMessage>
</ValidationRule>