force-app/main/default/objects/Deals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Phone__c</columns>
    <columns>BranchLocation__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Customer_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CustomerEntryDate__c</columns>
    <columns>LeadSource__c</columns>
    <columns>Stage__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>