force-app/main/default/objects/Deals__c/listViews/Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>Open_Opportunities</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2025 12:00 AM</value>
    </filters>
    <label>Open Opportunities</label>
</ListView>